# better-design-agent

./: .gitignore  Backlog.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-review.yml
examples/: brand-rules-example.yaml  flow-example.yaml
knowledge/: CORPUS_SOURCES.md  INDEX.yaml
knowledge/accessibility/: annotation-standards.md  aria-authoring-practices.md  coga-guidelines.md  (+3 more)
output/: excalidraw-opus.md  excalidraw-sonnet.md
scripts/: install-shim.sh
src/: cli.py  cli_wizard.py  errors.py  mcp_server.py  project_config.py
tests/: benchmark_brand_rules.py  benchmark_competitive.py  benchmark_critique.py  benchmark_diff_analyzer.py  benchmark_fix_generator.py  benchmark_flow_analyzer.py  benchmark_monitoring.py  benchmark_system_extractor.py  test_auth.py  test_autopilot.py  test_brand_rules.py  test_check.py  test_ci_cli.py  test_ci_runner.py  test_cli_wizard.py  test_competitive.py  test_diff_analyzer.py  test_doctor.py  test_errors.py  test_fix_generator.py  test_flow_analyzer.py  test_inline_fixes_in_audit.py  test_interactive_session.py  test_login_detection.py  test_mcp_server.py  test_monitoring.py  test_orchestrator_helpers.py  test_pdf_report.py  test_pragmatic_review.py  test_project_config.py  test_score_clamping.py  test_session_synthesis.py  test_shim_script.py  test_structural_fingerprint.py  test_style_guide.py  test_system_extractor.py  test_ui_review.py  test_version.py  test_wcag_polish.py
(+77 files in other folders)
